--- a/music-app/package.json
+++ b/music-app/package.json
@@ -16,6 +16,7 @@
     "npm": "^9.2.0",
     "or": "^0.2.0",
     "pinia": "^2.0.28",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
