--- a/music-app/package.json
+++ b/music-app/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "firebase": "^8.10.1",
     "i": "^0.3.7",
     "npm": "^9.2.0",
     "or": "^0.2.0",
